--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Homework 10</title>
     <link rel="stylesheet" href="./style.css" />
-    <link href="https://unpkg.com/slim-select@latest/dist/slimselect.css" rel="stylesheet">
   </head>
   <body>
-    <select class="breed-select is-hidden"></select>
-    <p class="loader"></p>
+    <select class="breed-select js-breed-select is-hidden"></select>
+    <p class="loader is-hidden"></p>
+    <p class="error is-hidden">Oops! Something went wrong! Try reloading the page!</p>
     <div class="cat-info"></div>
 
     <script src="./js/main.js" type="module"></script>
